--- a/index.html
+++ b/index.html
@@ -561,6 +561,8 @@ edge: ['A-&gt;B stretch', 'C-&gt;D stretch']}
                     <ul>
                         <li>Rich Talbot-Watkins</li>
                         <li>Ed Spittles &amp; the Visual6502 team</li>
+                        <li>Ian Bell</li>
+                        <li>Kevin Edwards</li>
                         <li>the users on the <a href="http://www.stardot.org.uk/forums/">STH forums</a></li>
                     </ul>
                 </li>
