Point at external resources

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ while (true) {
             </ul>
         </section>
         <section>
-            <h2><a href="http://localhost/jsbeeb/?videoCyclesBatch=8000&disc=Welcome.ssd" target="_blank">Demo</a></h2>
+            <h2><a href="https://bbc.godbolt.org/?videoCyclesBatch=8000&disc=Welcome.ssd&keyLayout=physical" target="_blank">Demo</a></h2>
             <aside class="notes">
                 <ul>
                     <li>Show MODE 7, another video mode.</li>
@@ -357,14 +357,14 @@ case 0xa9: // LDA #imm
   break;
                      </code></pre>
 
-            <h3 class="fragment"><a href="http://localhost/jsbeeb/?disc=elite.ssd&autoboot" target="_blank">Demo</a>
+            <h3 class="fragment"><a href="https://bbc.godbolt.org/?disc=elite.ssd&autoboot&keyLayout=physical" target="_blank">Demo</a>
             </h3>
         </section>
 
         <section>
             <h2>More games</h2>
             <img src="Zalaga.png" class="stretch">
-            <h3><a href="http://localhost/jsbeeb/?disc=Zalaga.ssd&autoboot&keyLayout=gaming&model=Master"
+            <h3><a href="https://bbc.godbolt.org/?disc=sth%3AAardvark%2FZalaga.zip&autoboot&keyLayout=gaming&model=Master"
                    target="_blank">Zalaga</a></h3>
             <aside class="notes">Fun part of emulation! e.g. address $1114. SAX zp instruction. show debugger</aside>
         </section>
@@ -451,7 +451,7 @@ case 0xa9: // LDA #imm
         </section>
         <section>
             <h2>Accurate timing information</h2>
-            <h3><a href="http://localhost/6502/expert.html?a=0&d=2e48fe" target="_blank">Visual 6502</a></h3>
+            <h3><a href="http://visual6502.org/JSSim/expert.html?a=0&d=2e48fe" target="_blank">Visual 6502</a></h3>
         </section>
         <section>
             <h2>ROL $fe48</h2>
