Simple landing page

--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
             src: url('teletext.ttf');
         }
 
-        .h1, .h2, .h3, .h4, .h5, .h6 {
+        h1, h2, h3, h4, h5, h6 {
             font-family: "Teletext", Impact, sans-serif;
         }
 
+        body {
+            background-color: black;
+            color: white;
+        }
+        a { color: #ff00af; }
+        a:visited { color: #d000af; }
     </style>
-    <!--[if lt IE 9]>
-    <script src="lib/js/html5shiv.js"></script>
-    <![endif]-->
-    <script src="default.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -36,7 +38,7 @@
 
 <ul>
     <li><a href="drw/">DRW presentation slides</a> - a talk I gave at my employer, <a href="http://drw.com/">DRW</a>.
-        The video for this talk is available on <a href="">YouTube</a>.
+        The video for this talk is available on <a href="https://www.youtube.com/37jyHQT7fXQ">YouTube</a>.
     </li>
     <li><a href="goto/">GOTO 2016</a> - a talk I gave at the 2016 Chicago GOTO conference.</li>
 </ul>
