Correct the youtube link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <ul>
     <li><a href="drw/">DRW presentation slides</a> - a talk I gave at my employer, <a href="http://drw.com/">DRW</a>.
-        The video for this talk is available on <a href="https://www.youtube.com/37jyHQT7fXQ">YouTube</a>.
+        The video for this talk is available on <a href="https://www.youtube.com/watch?v=37jyHQT7fXQ">YouTube</a>.
     </li>
     <li><a href="goto/">GOTO 2016</a> - a talk I gave at the 2016 Chicago GOTO conference.</li>
 </ul>
