--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         The video for this talk is available on <a href="https://www.youtube.com/watch?v=37jyHQT7fXQ">YouTube</a>.
     </li>
     <li><a href="goto/">GOTO 2016</a> - a talk I gave at the 2016 Chicago GOTO conference.</li>
+    <li><a href="cppcon2017/">CppCon 2017</a> - a talk I gave at the 2017 CppCon</li>
 </ul>
 
 </body>
