--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <h1>Slides on jsbeeb</h1>
 
-<div>I've made a couple of presentations on <a href="https://bbc.godbolt.org/">jsbeeb</a> and have made them available
+<div>I've given a few presentations on <a href="https://bbc.godbolt.org/">jsbeeb</a> and have made them available
     here:
 </div>
 
@@ -40,8 +40,9 @@
     <li><a href="drw/">DRW presentation slides</a> - a talk I gave at my employer, <a href="http://drw.com/">DRW</a>.
         The video for this talk is available on <a href="https://www.youtube.com/watch?v=37jyHQT7fXQ">YouTube</a>.
     </li>
-    <li><a href="goto/">GOTO 2016</a> - a talk I gave at the 2016 Chicago GOTO conference.</li>
-    <li><a href="cppcon2017/">CppCon 2017</a> - a talk I gave at the 2017 CppCon</li>
+    <li><a href="goto/">GOTO 2016</a> - a talk I gave at the 2016 Chicago GOTO conference. The video is <a href="https://www.youtube.com/watch?v=7WuRq-Wmw5o">here</a>.</li>
+    <li><a href="cppcon2017/">CppCon 2017</a> - a talk I gave at the 2017 <a href="https://cppcon.org/"CppCon</a>. It wasn't recorded</li>
+    <li><a href="demosplash2017/">Demosplash 2017</a> - a talk I gave at the 2017 <a href="http://www.demosplash.org/">DemoSplash</a></li>
 </ul>
 
 </body>
