--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         The video for this talk is available on <a href="https://www.youtube.com/watch?v=37jyHQT7fXQ">YouTube</a>.
     </li>
     <li><a href="goto/">GOTO 2016</a> - a talk I gave at the 2016 Chicago GOTO conference. The video is <a href="https://www.youtube.com/watch?v=7WuRq-Wmw5o">here</a>.</li>
-    <li><a href="cppcon2017/">CppCon 2017</a> - a talk I gave at the 2017 <a href="https://cppcon.org/"CppCon</a>. It wasn't recorded</li>
-    <li><a href="demosplash2017/">Demosplash 2017</a> - a talk I gave at the 2017 <a href="http://www.demosplash.org/">DemoSplash</a></li>
+    <li><a href="cppcon2017/">CppCon 2017</a> - a talk I gave at the 2017 <a href="https://cppcon.org/">CppCon</a>. Sadly, it wasn't recorded</li>
+    <li><a href="demosplash2017/">Demosplash 2017</a> - a talk I gave at the 2017 <a href="http://www.demosplash.org/">DemoSplash</a>.</li>
 </ul>
 
 </body>
