--- a/nng/index.html
+++ b/nng/index.html
@@ -76,6 +76,10 @@
             margin-top: 30px;
         }
 
+        img.au-mag {
+            height: 550px;
+        }
+
         .reveal {
             font-size: 30px;
         }
@@ -257,11 +261,11 @@
             </section>
             <section>
                 <h2>Why BBC Micro?</h2>
-                <img class="fragment" src="AcornUser1.png">
+                <img class="fragment au-mag" src="AcornUser1.png">
             </section>
             <section>
                 <h2>Why BBC Micro?</h2>
-                <img src="AcornUser2.png">
+                <img src="AcornUser2.png" class="au-mag">
             </section>
             <section>
                 <h2>Why Javascript?</h2>
@@ -825,6 +829,7 @@ case 0x2e: // ROL abs
 ],
 edge: ['A-&gt;B stretch', 'C-&gt;D stretch']
 }
+
 
 
 
