--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <li><a href="goto/">GOTO 2016</a> - a talk I gave at the 2016 Chicago GOTO conference. The video is <a href="https://www.youtube.com/watch?v=7WuRq-Wmw5o">here</a>.</li>
     <li><a href="cppcon2017/">CppCon 2017</a> - a talk I gave at the 2017 <a href="https://cppcon.org/">CppCon</a>. Sadly, it wasn't recorded</li>
     <li><a href="demosplash2017/">Demosplash 2017</a> - a talk I gave at the 2017 <a href="http://www.demosplash.org/">DemoSplash</a>.</li>
-    <li><a href="avast">Avast 2018</a> - a talk I gave at Avast</li>
+    <li><a href="avast">Avast 2018</a> - a talk I gave at Avast</li>. The video is on <a href="https://www.youtube.com/watch?v=mxPM-exDCLY">YouTube</a>.
 </ul>
 
 </body>
